Track Changes initial implementation
* Creates "TrackChanges" django model, which ties a (submission_uuid,
  scorer_id) pair to a set of edits suggested by peers for a particular
  submission.
* Adds machinery for on-the-fly installation of the New York Times's ICE
  library for collaborative editing, allowing peer assessors to create
  marked-up versions of submissions, which can then be returned to the
  author as feedback.
* Adds machinery for displaying suggested edits to the creator of a
  submission with their scores and other feedback.
* Configurable within Studio on a per-Assessment basis by including a
  URL to the ICE library as part of the assessment definition.
* For additional details, see:
  https://docs.google.com/document/d/18PITJu133sFpDl_B2GCbo2eb0GODcwVmVsktwPQfVSg/edit?usp=sharing

Co-authored-by: Giulio Gratta <giulio@giuliogratta.com>
Co-authored-by: Steven Burch <stv@stanford.edu>
Co-authored-by: Joe Blaylock <jrbl@jrbl.org>

--- a/openassessment/templates/openassessmentblock/peer/oa_peer_turbo_mode.html
+++ b/openassessment/templates/openassessmentblock/peer/oa_peer_turbo_mode.html
@@ -31,7 +31,15 @@
         </div>
 
         <div class="step__instruction">
-            <p>{% trans "Read and assess the following response from one of your peers." %}</p>
+          <p>
+              {% if track_changes %}
+                  {% blocktrans  with ins_start="<ins>" ins_end="</ins>" del_start="<del>" del_end="</del>" %}
+                      Read, edit and assess the following response from one of your peers. You can make {{ ins_start }}additions{{ ins_end }} and {{ del_start }}deletions{{ del_end }} to help improve the submission.
+                  {% endblocktrans %}
+              {% else %}
+                  {% trans "Read and assess the following response from one of your peers." %}
+              {% endif %}
+          </p>
         </div>
 
         <div class="step__content">
@@ -46,7 +54,7 @@
                                 </h3>
                             </header>
 
-                            <div class="peer-assessment__display__response">
+                            <div class="peer-assessment__display__response" {% if track_changes %} id="track-changes-content" contenteditable="true" {% endif %}>
                                 {{ peer_submission.answer.text|linebreaks }}
                             </div>
 
