--- a/openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
+++ b/openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
@@ -44,7 +44,15 @@
     <div class="ui-toggle-visibility__content">
         <div class="wrapper--step__content">
             <div class="step__instruction">
-                <p>{% trans "Read and assess the following response from one of your peers." %}</p>
+                <p>
+                    {% if track_changes %}
+                        {% blocktrans  with ins_start="<ins>" ins_end="</ins>" del_start="<del>" del_end="</del>" %}
+                            Read, edit and assess the following response from one of your peers. You can make {{ ins_start }}additions{{ ins_end }} and {{ del_start }}deletions{{ del_end }} to help improve the submission.
+                        {% endblocktrans %}
+                    {% else %}
+                        {% trans "Read and assess the following response from one of your peers." %}
+                    {% endif %}
+                </p>
             </div>
 
             <div class="step__content">
@@ -62,7 +70,7 @@
                                     </h3>
                                 </header>
 
-                                <div class="peer-assessment__display__response">
+                                <div class="peer-assessment__display__response" {% if track_changes %} id="track-changes-content" contenteditable="true" {% endif %}>
                                     {{ peer_submission.answer.text|linebreaks }}
                                 </div>
 
