--- a/openassessment/templates/openassessmentblock/edit/oa_edit_peer_assessment.html
+++ b/openassessment/templates/openassessmentblock/edit/oa_edit_peer_assessment.html
@@ -75,10 +75,13 @@
                 </li>
                 <li class="field comp-setting-entry">
                     <div class="wrapper-comp-setting">
-                        <label for="peer_assessment_track_changes" class="setting-label"> {% trans "Track Changes URL" %}</label>
-                        <input id="peer_assessment_track_changes" class="input setting-input" type="text" value="{{ assessments.peer_assessment.track_changes }}">
+                        <label for="peer_assessment_track_changes" class="setting-label"> {% trans "Enable Track Changes" %}</label>
+                        <select id="peer_assessment_track_changes" class="input setting-input">
+                            <option value="0">{% trans "False"%}</option>
+                            <option value="1" {% if assessments.peer_assessment.enable_track_changes %} selected="true" {% endif %}>{% trans "True"%}</option>
+                        </select>
                     </div>
-                    <p class="setting-help">{% trans "Specify the URL of the Track Changes library you wish to use. Leave empty to disable."%}</p>
+                    <p class="setting-help">{% trans "Specify whether peers can edit submissions using the ICE library."%}</p>
                 </li>
             </ul>
         </div>
