--- a/openassessment/templates/openassessmentblock/oa_submission_answer.html
+++ b/openassessment/templates/openassessmentblock/oa_submission_answer.html
@@ -17,10 +17,10 @@
                 </div>
             </article>
             {% if part.text %}
-            {% if track_changes %}<input id="track_changes_clear_button_{{ forloop.counter0 }}" type="button" value="Clear Changes" />{% endif %}
+            {% if enable_track_changes %}<input id="track_changes_clear_button_{{ forloop.counter0 }}" type="button" value="Clear Changes" />{% endif %}
             <div class="submission__answer__part__text">
                 <h5 class="submission__answer__part__text__title">{{ answer_text_label }}</h5>
-                <div class="submission__answer__part__text__value" {% if track_changes %} id="track-changes-content_{{ forloop.counter0 }}" contenteditable="true" {% endif %}>
+                <div class="submission__answer__part__text__value" {% if enable_track_changes %} id="track-changes-content_{{ forloop.counter0 }}" contenteditable="true" {% endif %}>
                     {{ part.text|escape|link_and_linebreak }}
                 </div>
             </div>
