--- a/openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
+++ b/openassessment/templates/openassessmentblock/peer/oa_peer_assessment.html
@@ -63,7 +63,7 @@
         <div class="wrapper--step__content">
             <div class="step__instruction">
                 <p>
-                    {% if track_changes %}
+                    {% if enable_track_changes %}
                         {% blocktrans  with ins_start="<ins>" ins_end="</ins>" del_start="<del>" del_end="</del>" %}
                             Read, edit and assess the following response from one of your peers. You can make {{ ins_start }}additions{{ ins_end }} and {{ del_start }}deletions{{ del_end }} to help improve the submission.
                         {% endblocktrans %}
